[gd_scene load_steps=8 format=3 uid="uid://um0sg8xjg31x"]

[ext_resource type="Script" uid="uid://lvykqelmi6hu" path="res://scripts/horse.gd" id="1_7j5lf"]
[ext_resource type="Texture2D" uid="uid://ykrrgeur0sm6" path="res://assets/1-bit-pack/Tilesheet/colored-transparent.png" id="2_lpili"]

[sub_resource type="AtlasTexture" id="AtlasTexture_42vyf"]
atlas = ExtResource("2_lpili")
region = Rect2(476, 119, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mwg8"]
atlas = ExtResource("2_lpili")
region = Rect2(459, 119, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_owkpo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42vyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mwg8")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lpili"]
size = Vector2(13.25, 12.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42vyf"]
size = Vector2(13, 12.5)

[node name="Horse" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_7j5lf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_owkpo")
autoplay = "default"
frame_progress = 0.621758

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_lpili")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_42vyf")

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
rotation = 1.309
target_position = Vector2(-1.81173, 6.76148)
collision_mask = 9

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
rotation = -1.5708
target_position = Vector2(-4.76837e-07, 7)
collision_mask = 9

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
